Upgrade to Micronaut 4 snapshot (#617)
Initial upgrade to Micronaut 4. Shifts to use runtime intialization for GraalVM and removes the workarounds and patches we had for Kafka for GraalVM 22.3 which are no longer necessary

Co-authored-by: Graeme Rocher <graeme.rocher@gmail.com>