@@ -21,11 +21,11 @@ import io.micrometer.core.instrument.binder.MeterBinder;
 import io.micrometer.core.lang.NonNull;
 import io.micronaut.configuration.kafka.metrics.builder.KafkaMetricMeterTypeBuilder;
 import io.micronaut.core.annotation.Internal;
+import jakarta.annotation.PreDestroy;
 import org.apache.kafka.common.MetricName;
 import org.apache.kafka.common.metrics.KafkaMetric;
 import org.apache.kafka.common.metrics.MetricsReporter;
 
-import javax.annotation.PreDestroy;
 import java.io.Closeable;
 import java.util.Collection;
 import java.util.HashSet;
@@ -34,7 +34,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * A {@link MetricsReporter} that binds metrics to micrometer.
@@ -113,7 +112,7 @@ public abstract class AbstractKafkaMetricsReporter implements MetricsReporter, M
                 .stream()
                 .filter(entry -> getIncludedTags().contains(entry.getKey()))
                 .map(entry -> Tag.of(entry.getKey(), entry.getValue()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
